# mite

./: .bastion.yaml  .gitattributes  .gitignore  .gitmodules  .nudge.yaml  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  PRODUCT.md  README.md  THIRD_PARTY_NOTICES.md  build.rs  docker-compose.yml  fetch_models.sh  model-manifest.json
.agents/skills/: readme.md
.agents/skills/names-are-not-type-safety/: SKILL.md
.agents/skills/names-are-not-type-safety/agents/: openai.yaml
.agents/skills/names-are-not-type-safety/references/: article-notes.md
.agents/skills/parse-dont-validate/: SKILL.md
.agents/skills/parse-dont-validate/agents/: openai.yaml
.agents/skills/parse-dont-validate/references/: article-notes.md
.agents/skills/rust100k-architecture-docs/: SKILL.md
.agents/skills/rust100k-architecture-docs/agents/: openai.yaml
.agents/skills/rust100k-architecture-docs/references/: article-notes.md
.agents/skills/rust100k-build-performance/: SKILL.md
.agents/skills/rust100k-build-performance/agents/: openai.yaml
.agents/skills/rust100k-build-performance/references/: article-notes.md
.agents/skills/rust100k-testing-discipline/: SKILL.md
.agents/skills/rust100k-testing-discipline/agents/: openai.yaml
.agents/skills/rust100k-testing-discipline/references/: article-notes.md
.claude/: bootstrap.mjs  cloud-setup.sh  launch.json
.claude/skills/using-bastion/: SKILL.md
.githooks/: pre-commit
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: bastion.yml  ci.yml  release.yml  site.yml
.impeccable/: config.json
app/: .gitignore  README.md  index.html  package.json  vite.config.ts
app/src/: App.tsx  main.tsx
app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: cli.rs  commands.rs  download.rs  engine_use.rs  eval_capture.rs  home.rs  lib.rs  models.rs  release.rs  settings.rs  status.rs  warmup.rs  watch.rs  window.rs  windows.rs
app/src/components/: AnsiLine.tsx  AppUpdateBanner.tsx  AppUpdateCard.tsx  AppUpdateRow.tsx  EngineReconcileNotice.tsx  EngineWarmupNotice.tsx  MiteMark.tsx  ProgressBar.tsx  WindowCard.tsx
app/src/lib/: ansi.test.ts  ansi.ts  api.ts  format.ts  useAppUpdate.ts  useEngineReconcile.ts  useEngineWarmup.ts
app/src/styles/: app.css
app/src/views/: Dashboard.tsx  RuntimeSetup.tsx  Settings.tsx  SetupWizard.tsx  WatchView.tsx
client/: Cargo.toml
client/src/: main.rs
docs/: accuracy.md  architecture.md  eval-geometry.md  eval-metadata.md  local-windows.md  models.md  performance.md  releases.md  self-hosting.md
docs/dev/: readme.md
docs/future/: pure-gpu.md
examples/: audit_label_bounds.rs  overlay_preview.rs  profile_ocr.rs  reannotate_character_bounds.rs  relabel_eval_tokens.rs
lib/db/: Cargo.toml
lib/db/src/: lib.rs
lib/dict/: Cargo.toml
lib/dict/src/: lib.rs
lib/lex/: Cargo.toml
lib/lex/src/: lib.rs
lib/ocr/: Cargo.toml  build.rs
lib/ocr/benches/: ocr.rs
lib/ocr/src/: lib.rs  paddle.rs
lib/ocr/tests/it/: main.rs
scripts/: add-omitted-diamond-labels.ts  analyze-eval-failures.ts  apply-label-bounds-fixes.ts  attribute-eval-loss.ts  bootstrap-dev.ps1  download-models.ps1  install-gpu-runtime.ps1  install-precommit-hook.ps1  precommit.ps1  quantize-models.py  setup-claude-env.sh  setup-windows.ps1  verify-onnx-models.py
server/: Cargo.toml
server/src/: main.rs
site/: README.md  astro.config.mjs  package-lock.json  package.json  vitest.config.ts
site/public/: CNAME  manifest.json  robots.txt  sitemap.xml
site/scripts/: og-gen.mjs
site/src/components/: DefinePopup.astro  Footer.astro  GetStarted.astro  GrammarColor.astro  Header.astro  Hero.astro  HonestFit.astro  HowItWorks.astro  Icon.astro  MiteMark.astro  MiteTerm.astro  MiteText.astro  MiteWord.astro  Moment.astro  OverlayLine.astro  Ruby.astro  SectionHead.astro  WhyItHolds.astro  Wordmark.astro
site/src/data/: sentences.test.ts  sentences.ts
site/src/layouts/: Base.astro
site/src/pages/: faq.astro  index.astro
site/src/styles/: global.css  tokens.css
src/: artifact.rs  cli.rs  config.rs  debug_capture.rs  doctor.rs  eval.rs  eval_capture.rs  eval_geometry.rs  frequency.rs  geometry.rs  hotkey.rs  lib.rs  main.rs  models.rs  morphology.rs  ocr.rs  pos.rs  script.rs  storage_cleanup.rs  text_blocks.rs  text_corrections.rs  text_geometry.rs  version.rs  wgc_capture.rs
src/capture/: image_probe.rs  mod.rs  window.rs
src/dictionary/: deinflection.rs  mod.rs  raw.rs
src/eval_ui/: mod.rs
src/eval_ui/static/: app.css  app.js  index.html
src/hover/: furigana.rs  mod.rs  pill.rs  sense.rs
src/hud/: mod.rs  timing.rs
src/interactive/: auto_capture.rs  mod.rs  smoothing.rs
src/ort_engine/: mod.rs  providers.rs  text.rs  warmup.rs
src/win32_overlay/: mod.rs  platform.rs  style.rs
