[package]
name = "mite"
# Placeholder only. The reported version is derived from git tags at build time
# by build.rs (see src/version.rs); release CI overrides it with the release tag.
version = "0.0.0"
edition = "2024"
description = "Local-first low-latency OCR overlay pipeline for Windows/NVIDIA systems."
license = "AGPL-3.0-only"
repository = "https://github.com/jssblck/mite"
readme = "README.md"
build = "build.rs"
default-run = "mite"

[dependencies]
anyhow = "1.0.102"
base64 = "0.22"
clap = { version = "4.6.1", features = ["derive"] }
image = { version = "0.25.10", default-features = false, features = ["png", "jpeg"] }
lindera = { version = "4.0.0", features = ["embed-ipadic"] }
ort = { version = "2.0.0-rc.12", features = ["cuda", "tensorrt"] }
rayon = "1.12.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
windows = { version = "0.62.2", features = ["Foundation", "Graphics_Capture", "Graphics_DirectX", "Graphics_DirectX_Direct3D11", "Win32_Foundation", "Win32_Graphics_Direct3D", "Win32_Graphics_Direct3D11", "Win32_Graphics_Dxgi", "Win32_Graphics_Dxgi_Common", "Win32_Graphics_Gdi", "Win32_System_Com", "Win32_System_LibraryLoader", "Win32_System_WinRT_Direct3D11", "Win32_System_WinRT_Graphics_Capture", "Win32_UI_HiDpi", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging"] }
xcap = "0.9.6"

[dev-dependencies]
tempfile = "3.27.0"

[lints.clippy]
correctness = { level = "deny", priority = -1 }
suspicious = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
inline_always = "deny"
unnecessary_wraps = "deny"
