[package]
name = "server"
version = "0.0.0"
edition = "2024"
authors = ["Jessica Black <me@jessica.black>"]
description = "みて is an all-in-one application for interacting with Japanese text in visual content."
license = "AGPL-3.0-only"
repository = "https://github.com/jssblck/mite"
homepage = "https://github.com/jssblck/mite"
documentation = "https://github.com/jssblck/mite"
publish = false

[lints]
workspace = true

[dependencies]
color-eyre = "0.6.4"
tokio = { version = "1.45.0", features = ["full"] }
