[package]
name = "app"
version = "0.0.0"
description = "Mite desktop app: installs, updates, and launches the mite OCR overlay CLI."
authors = ["Mite"]
edition = "2021"

# The reported app version is derived from git tags at build time by build.rs
# (see the APP_VERSION env). Release CI rewrites tauri.conf.json's version with
# the release tag for the installer; this placeholder keeps local builds happy.

[lib]
# The `_lib` suffix keeps the lib name distinct from the bin on Windows.
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
# Signed app self-update. The updater verifies each release's installer against
# the minisign public key in tauri.conf.json; tauri-plugin-process relaunches the
# app after an update is applied.
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
# Remembers the main window's size and position across launches.
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP downloads (blocking; driven off the async executor via spawn_blocking).
ureq = { version = "2", features = ["json"] }
# Integrity + archive handling for the CLI binary and model archives.
sha2 = "0.10"
hex = "0.4"
zip = { version = "2", default-features = false, features = ["deflate"] }
anyhow = "1"

# Mirror the root crate's clippy bar so the app surface is held to the same
# standard (CI runs `cargo clippy --all-targets -- -D warnings` here too).
[lints.clippy]
correctness = { level = "deny", priority = -1 }
suspicious = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
inline_always = "deny"
unnecessary_wraps = "deny"
